...
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TextFieldObjCViewController">
            <connections>
                <outlet property="textField1" destination="vWh-eM-AN4" id="gim-2t-yKQ"/>
                <outlet property="textField2" destination="CAv-G4-lIy" id="Td1-HS-dL7"/>
                <outlet property="textField3" destination="Wvo-xC-SCd" id="cKX-Hb-HAR"/>
                <outlet property="textFieldIcon" destination="kr5-7m-HSr" id="gb7-05-x9d"/>
                <outlet property="textFieldPrefix" destination="HMJ-Ux-DOL" id="taA-0u-O1f"/>
                <outlet property="textFieldSuffix" destination="WQ6-8K-qiK" id="vgr-Nm-Px7"/>
                <outlet property="textFieldWIthAction" destination="1s9-bb-sNY" id="nfY-WD-WZl"/>
                <outlet property="textFieldWithCheck" destination="t9r-aY-KVz" id="1KA-kg-QLc"/>
...
                                                <userDefinedRuntimeAttribute type="string" keyPath="ibState" value="IDLE"/>
                                            </userDefinedRuntimeAttributes>
                                        </view>
                                        <view contentMode="scaleToFill" placeholderIntrinsicWidth="384" placeholderIntrinsicHeight="100" translatesAutoresizingMaskIntoConstraints="NO" id="clk-7X-V3V" customClass="AndesTextArea" customModule="AndesUI">
                                            <rect key="frame" x="0.0" y="1498" width="384" height="100"/>
                                            <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <accessibility key="accessibilityConfiguration" identifier="textArea1"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="label" value="TextArea read only"/>
                                                <userDefinedRuntimeAttribute type="number" keyPath="counter">
                                                    <integer key="value" value="30"/>
                                                </userDefinedRuntimeAttribute>
                                                <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="TextField"/>
...
                                                <userDefinedRuntimeAttribute type="string" keyPath="text" value="Some text in this text area"/>
                                            </userDefinedRuntimeAttributes>
                                        </view>
                                        <view contentMode="scaleToFill" placeholderIntrinsicWidth="384" placeholderIntrinsicHeight="100" translatesAutoresizingMaskIntoConstraints="NO" id="UtV-ye-fej" customClass="AndesTextArea" customModule="AndesUI">
                                            <rect key="frame" x="0.0" y="1628" width="384" height="100"/>
                                            <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <accessibility key="accessibilityConfiguration" identifier="textArea2"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="label" value="TextArea read only"/>
                                                <userDefinedRuntimeAttribute type="number" keyPath="counter">
                                                    <integer key="value" value="30"/>
                                                </userDefinedRuntimeAttribute>
                                                <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="TextField"/>
...
