...
        topAnchor.constraint(equalTo: andesCodeTextFieldView.topAnchor).isActive = true
        bottomAnchor.constraint(equalTo: andesCodeTextFieldView.bottomAnchor).isActive = true
    }

    func setupAndesTextFields() {
        stackView.arrangedSubviews.forEach {
            if let andesTextField = $0 as? AndesTextField {
                andesTextField.delegate = self
                andesTextField.textInputTraits = .numberPad
            }
        }
    }

...
